--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
 MONGO_URL = mongodb://127.0.0.1:27017/Medic-OSCE
+
+ACCESS_TOKEN_SECRET=access_token_secret
+REFRESH_TOKEN_SECRET=refresh_token_secret
