--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.1",
     "sass": "^1.93.1",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
