update thu 4 week 12

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ MONGO_URL = mongodb://127.0.0.1:27017/Medic-OSCE
 
 ACCESS_TOKEN_SECRET=access_token_secret
 REFRESH_TOKEN_SECRET=refresh_token_secret
+GOOGLE_CLIENT_ID=178512941085-ir5m5qatfkt0vutrsgnf66hobet8aq0j.apps.googleusercontent.com
