--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "google-auth-library": "^10.5.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.0.0",
     "mongoose": "^8.19.1",
     "nodemon": "^3.1.10"
   }
